--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "devDependencies": {
-    "eslint": "^7.32.0 || ^8.2.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.25.2"
+  "name": "expenses-chart-component",
+  "private": true,
+  "version": "0.0.0",
+  "scripts": {
+    "dev": "vite --host",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+   "devDependencies": {
+      "vite": "^2.9.9",
+      "eslint": "^7.32.0 || ^8.2.0",
+      "eslint-config-airbnb-base": "^15.0.0",
+      "eslint-plugin-import": "^2.25.2"
   }
 }
